# aiAntiScam

./: Dockerfile  main.py  pyproject.toml
web/: index.html  style.css
