[project]
name = "sitcon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.116.0",
    "google-genai>=1.25.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
]
